gcc/testsuite/rust/rustc/ui/implicit-method-bind.rs
fn main() {
    let _f = 10i32.abs; // { dg-error ".E0615." "" { target *-*-* } }
}

